Do not restart Chrome to apply user flags with stub session manager

This prevents restarting Chrome to apply per-user flags when not
running on Chrome OS - since Chrome OS session manager, which
initiates browser restart, does not run on desktop build of
Chrome OS, browser restart to apply user flags will not work.
All that would happen is browser shutdown.

Instead uf using SysInfo::IsRunningOnChromeOS directly, add
information about whether session manager supports restart to
session manager client - this will enable us to enable restart
behaviour in tests when needed, e.g. for tests that test browser
restart flow.

BUG=684796

Review-Url: https://codereview.chromium.org/2653823004
Cr-Commit-Position: refs/heads/master@{#446088}

Former-commit-id: 827ca1c2f792da3147275ea3c3ad0134f708d59f